# woah

./: .gitignore  Cargo.toml  Readme.md  file.txt
examples/: complex.woah  quicksort.woah  sleepsort.woah  squares.ccdm  squares.woah  test.woah
examples/quicksort/src/: main.woah  quicksort.woah
examples/tests/: statement.ccdm
src/: error.rs  interface.rs  lexer.rs  line.rs  main.rs  message.rs  token.rs
src/analysis/: analyser.rs  builtin.rs  escape_analysis.rs  function.rs  mod.rs  type_checker.rs  type_checking.rs
src/check/: check_expr_type.rs  mod.rs  scoped_value.rs  type_checker.rs
src/compile/: compiler.rs  file.rs  mod.rs
src/interpret/: mod.rs  program_state.rs  stack_frame.rs  value.rs
src/parse/: class.rs  expr.rs  function.rs  import.rs  mod.rs  module.rs  parse_class.rs  parse_expr.rs  parse_function.rs  parse_statement.rs  parse_type.rs  statement.rs  typekind.rs
