[package]
name = "woah"
version = "0.1.0"
authors = ["Conrad Khakhria <conradjkhakhria@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
regex = "1.4.3"
lazy_static = "1.4.0"
snafu = "0.6.10"
